--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
 <head>
   <title>Google</title>
+  <meta charset="utf-8">
+  <link href="css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+  <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <!-- Starts Top Nav of Page -->
   <header>
-    <nav>
+    <nav class="topnav">
       <ul>
-        <li>Gmail</li>
-        <li>Images</li>
-        <li>Google Apps</li>
-        <li>Notifications</li>
-        <li>Account</li>
+        <li><a href="#">Gmail</a></li>
+        <li><a href="#">Images</a></li>
+        <li><a href="#"><img src="images/apps.png" alt="nine by nine grid icon" class="icon"></a></li>
+        <li><a href="#"><img src="images/notification.png" alt="notification bell" class="icon"></a></li>
+        <li><a href="#"><img src="images/account.jpg" alt="account holder image" class="profile_pic"></a></li>
       </ul>
     </nav>
   </header>
@@ -20,13 +24,18 @@
 
  <!-- Starts Center Section (Logo & Search) -->
   <section>
-    <img src="images/google_logo.png" alt="Blue, red, yellow, and green google logo.">
-    <form>
-      <input type="text" name="search"><br>
-      <input type="submit" value="Google Search">
-      <input type="submit" value="I'm Feeling Lucky">
-    </form>
-    <p>&num;ItTakesATeacher. Happy World Teachers' Day</p>
+    <div id="search">
+      <img src="images/google_logo.png" alt="Blue, red, yellow, and green google logo." class="gologo">
+      <div class="form">
+      <form>
+        <input type="text" name="search"><br>
+        <div class="buttons">
+        <input type="submit" value="Google Search">
+        <input type="submit" value="I'm Feeling Lucky">
+      </div>
+      </form>
+    </div>
+    </div>
   </section>
   <!-- End Center Section -->
 
@@ -37,9 +46,9 @@
         <li><a href="#">Advertising</a></li>
         <li><a href="#">Business</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Terms</a></li>
-        <li><a href="#">Privacy</a></li>
+        <li class="right"><a href="#">Settings</a></li>
+        <li class="right"><a href="#">Terms</a></li>
+        <li class="right"><a href="#">Privacy</a></li>
       </ul>
     </nav>
   </footer>
